force-app/main/default/objects/RMS_Ship_To__c/RMS_Ship_To__c.object-meta.xml
<CustomObject>
    <description>批发商下，销售对象的仓库</description>
    <label>RMS Ship To</label>
    <nameField>
        <label>Ship To Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Ship To List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>