force-app/main/default/objects/RMS_Ship_To__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>客户简称</description>
    <label>Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>