force-app/main/default/objects/RMS_Ship_To__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>business type</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner-HQ</fullName>
            </value>
            <value>
                <fullName>Partner-Multi</fullName>
            </value>
            <value>
                <fullName>Sub-partner</fullName>
            </value>
            <value>
                <fullName>Wholesale.com</fullName>
            </value>
            <value>
                <fullName>Wholesale.com-close out</fullName>
            </value>
            <value>
                <fullName>Wholesale.com-JD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>