force-app/main/default/objects/RMS_Ship_To__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>