force-app/main/default/objects/RMS_Ship_To__c/fields/City_Tier__c.field-meta.xml
<CustomField>
    <fullName>City_Tier__c</fullName>
    <description>city tier</description>
    <label>City Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T0</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>T5</fullName>
            </value>
            <value>
                <fullName>T6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>