force-app/main/default/objects/RMS_Ship_To__c/fields/Code_Add__c.field-meta.xml
<CustomField>
    <fullName>Code_Add__c</fullName>
    <description>code add</description>
    <label>Code Add</label>
    <length>100</length>
    <type>Text</type>
</CustomField>