force-app/main/default/objects/RMS_Ship_To__c/fields/Dropped_Label__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Label__c</fullName>
    <description>Dropped Label</description>
    <label>Dropped Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>真</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>