force-app/main/default/objects/RMS_Ship_To__c/fields/DTC_Code__c.field-meta.xml
<CustomField>
    <fullName>DTC_Code__c</fullName>
    <description>CFS直营门店或者Digital五大仓</description>
    <label>DTC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>