force-app/main/default/objects/RMS_Ship_To__c/fields/Geo_Big_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Big_Region__c</fullName>
    <description>Geo_Big_Region</description>
    <label>Geo Big Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>