force-app/main/default/objects/RMS_Ship_To__c/fields/Geo_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Sub_Region__c</fullName>
    <description>Geo Sub Region</description>
    <label>Geo Sub Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>