force-app/main/default/objects/RMS_Ship_To__c/fields/IsDtcValid__c.field-meta.xml
<CustomField>
    <fullName>IsDtcValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DTC是否有效（初始只有五个有效）</description>
    <label>IsDtcValid</label>
    <type>Checkbox</type>
</CustomField>