force-app/main/default/objects/RMS_Ship_To__c/fields/Lead_Time_To_Door__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_To_Door__c</fullName>
    <description>lead time to door</description>
    <label>Lead Time To Door</label>
    <length>40</length>
    <type>Text</type>
</CustomField>