force-app/main/default/objects/RMS_Ship_To__c/fields/Message_Notification__c.field-meta.xml
<CustomField>
    <fullName>Message_Notification__c</fullName>
    <description>Message Notification</description>
    <label>Message Notification</label>
    <type>Email</type>
</CustomField>