force-app/main/default/objects/RMS_Ship_To__c/fields/POS_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_ID__c</fullName>
    <description>对应POS ID</description>
    <label>POS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>