force-app/main/default/objects/RMS_Ship_To__c/fields/Pos_Id_Rr__c.field-meta.xml
<CustomField>
    <fullName>Pos_Id_Rr__c</fullName>
    <description>pos id rr</description>
    <label>Pos Id Rr</label>
    <length>40</length>
    <type>Text</type>
</CustomField>