force-app/main/default/objects/RMS_Ship_To__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province</description>
    <label>Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>