force-app/main/default/objects/RMS_Ship_To__c/fields/Sales_Email2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Email2__c</fullName>
    <label>Sales Email2</label>
    <type>Email</type>
</CustomField>