force-app/main/default/objects/RMS_Ship_To__c/fields/Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Email__c</fullName>
    <label>Sales Email</label>
    <type>Email</type>
</CustomField>