force-app/main/default/objects/RMS_Ship_To__c/fields/Ship_To_Area__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Area__c</fullName>
    <description>仓库所在地区（如：华东）</description>
    <label>Ship-To Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>