force-app/main/default/objects/RMS_Ship_To__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <description>仓库所在城市</description>
    <label>Ship-To City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>