force-app/main/default/objects/RMS_Ship_To__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <description>Ship-to名称</description>
    <label>Ship-To Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>