force-app/main/default/objects/RMS_Ship_To__c/fields/Sold_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>关联Sold-to</description>
    <label>Sold To Code</label>
    <referenceTo>RMS_Sold_To__c</referenceTo>
    <relationshipLabel>RMS Ship To List</relationshipLabel>
    <relationshipName>RMS_Ship_To_List</relationshipName>
    <type>Lookup</type>
</CustomField>