force-app/main/default/objects/RMS_Ship_To__c/fields/ST_Code__c.field-meta.xml
<CustomField>
    <fullName>ST_Code__c</fullName>
    <externalId>true</externalId>
    <label>ST Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>