force-app/main/default/objects/RMS_Ship_To__c/fields/T_Create_Time__c.field-meta.xml
<CustomField>
    <fullName>T_Create_Time__c</fullName>
    <description>t create time</description>
    <label>T Create Time</label>
    <type>DateTime</type>
</CustomField>