force-app/main/default/objects/RMS_Ship_To__c/fields/T_Etl_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Etl_Date__c</fullName>
    <description>t_etl_date</description>
    <label>T Etl Date</label>
    <type>Date</type>
</CustomField>