force-app/main/default/objects/RMS_Ship_To__c/fields/T_Uuid__c.field-meta.xml
<CustomField>
    <fullName>T_Uuid__c</fullName>
    <description>t uuid</description>
    <label>T Uuid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>