force-app/main/default/objects/RMS_Ship_To__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>territory</description>
    <label>Territory</label>
    <length>40</length>
    <type>Text</type>
</CustomField>