force-app/main/default/objects/RMS_Ship_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sold_To_Code__c</columns>
    <columns>City__c</columns>
    <columns>Code_Add__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>