force-app/main/default/objects/RMS_Ship_To__c/listViews/RMS_Baoshang_Team_RMS_Ship_To.listView-meta.xml
<ListView>
    <fullName>RMS_Baoshang_Team_RMS_Ship_To</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS Baoshang Team</label>
    <queue>RMS_Baoshang_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>